make-a-wish-salesforce/src/objects/Volunteer_Roles__c.object
<CustomObject>
    <description>This custom object would store the roles for which the volunteer has expressed interest or has been approved for.</description>
    <fields>
        <fullName>Chapter_Name__c</fullName>
        <description>It store the chapter name.</description>
        <formula>Chapter_Role__r.Chapter_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chapter Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chapter_Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It holds the chapter and role of the volunteer.</description>
        <label>Chapter Role</label>
        <referenceTo>Chapter_Role__c</referenceTo>
        <relationshipLabel>Volunteer Roles</relationshipLabel>
        <relationshipName>Volunteer_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>External Id from RE.</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Migrated_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It will indicate the record is imported from mulesoft or not.</description>
        <label>Migrated Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RE_Created_Date__c</fullName>
        <description>DATEADDED</description>
        <label>RE Created Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Import_Id__c</fullName>
        <description>ID, No Import ID</description>
        <label>RE Import Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Last_Activity_Date__c</fullName>
        <description>DATE_FINISHED</description>
        <label>RE Last Activity Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Last_Modified_Date__c</fullName>
        <description>DATECHANGED</description>
        <label>RE Last Modified Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Role_Name__c</fullName>
        <description>VOLUNTEER_TYPE</description>
        <label>RE Role Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Status__c</fullName>
        <description>STATUS</description>
        <label>RE Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Volunteer_Roles_ID__c</fullName>
        <description>IMPORT_ID</description>
        <label>RE Volunteer Roles ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Name__c</fullName>
        <description>This field store the role name.</description>
        <formula>Chapter_Role__r.Role_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>It will indicate the volunteer role that volunteer has completed the training for that chpater role or not.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Trained</fullName>
                </value>
                <value>
                    <fullName>Pending Training</fullName>
                </value>
                <value>
                    <fullName>Chapter Review</fullName>
                </value>
                <value>
                    <fullName>Former - Chapter</fullName>
                </value>
                <value>
                    <fullName>Former - Volunteer</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Volunteer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It will hold the volunteer name and define chapter and role for this volunteer.</description>
        <label>Volunteer Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Volunteer Contact</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Volunteer Roles</relationshipLabel>
        <relationshipName>Volunteer_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isWishRole__c</fullName>
        <description>This field is used to store the wish role.</description>
        <formula>Chapter_Role__r.Role_Name__r.isWishRole__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isWishRole</label>
        <type>Checkbox</type>
    </fields>
    <label>Volunteer Role</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Volunteer_Name__c</columns>
        <columns>Chapter_Role__c</columns>
        <columns>Chapter_Name__c</columns>
        <columns>Role_Name__c</columns>
        <columns>isWishRole__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VR-{000000}</displayFormat>
        <label>Volunteer Roles ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volunteer Roles</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>